--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header> <h1>Pets</h1> </header>
     <main>
     <div><h2>Rocky</h2>
-        <img src="Images/rocky.jpg" alt="Black cat sleeping on red blanket" width="400">
+        <img src="images/rocky.jpg" alt="Black cat sleeping on red blanket" width="400">
         <p1>Rocky is a 17 year old cat who enjoys spending his time laying around. He likes watching birds and trying to talk to them. 
             While he loves birds from afar, he is not a fan of any other animals and enjoys terrorizing the dog, Oliver.</p1>
             <p2>Rocky is also a big fan of eating. He will do anything for a treat and likes any and all foods. 
