--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header> <h1>Pets</h1> </header>
     <main>
     <div><h2>Rocky</h2>
-        <img src="images/rocky.jpg" alt="Black cat sleeping on red blanket" width="400">
+        <img src="Images/rocky.jpg" alt="Black cat sleeping on red blanket" width="400">
         <p1>Rocky is a 17 year old cat who enjoys spending his time laying around. He likes watching birds and trying to talk to them. 
             While he loves birds from afar, he is not a fan of any other animals and enjoys terrorizing the dog, Oliver.</p1>
             <p2>Rocky is also a big fan of eating. He will do anything for a treat and likes any and all foods. 
@@ -28,10 +28,10 @@
                 Rocky is fine with playing with it instead.
             </p2>
             <h3>Photo Gallery</h3>
-            <img src="images/rocky_treats.jpg" alt="Black cat sticking his head into a treat bin" width="200">
-            <img src="images/rocky_bird_watching.jpg" alt="Cat looking out the window" width="200">
-            <img src="images/rocky_hand.jpg" alt="Cat sleeping holding hand" width="200">
-            <img src="images/rocky_sleeping.jpg" alt="Cat sleeping" width="200">
+            <img src="Images/rocky_treats.jpg" alt="Black cat sticking his head into a treat bin" width="200">
+            <img src="Images/rocky_bird_watching.jpg" alt="Cat looking out the window" width="200">
+            <img src="Images/rocky_hand.jpg" alt="Cat sleeping holding hand" width="200">
+            <img src="Images/rocky_sleeping.jpg" alt="Cat sleeping" width="200">
             <h3>Likes</h3>
             <ul>
                 <li>Eating</li>
@@ -41,7 +41,7 @@
               <!-- Lauren Pesce -->
      </div>
      <div><h2>Pumpkin</h2>
-        <img src="images/pumpkin.jpg" alt="Orange cat sitting on carpet." width="400">
+        <img src="Images/pumpkin.jpg" alt="Orange cat sitting on carpet." width="400">
         <p1>Pumpkin is an 11 year old cat. He loves eating. Even when he is full, he will continue to eat if it means
             the dog will not get any. Pumpkin also grealy enjoys napping. Half his day is spent asleep and the other half
             is spent begging for food.</p1>
@@ -49,10 +49,10 @@
                 gravitates towards them. He also loves antagonizing Oliver, the dog. However, he does not enjoy 
                 when Oliver barks.</p2>
             <h3>Photo Gallery</h3>
-            <img src="images/pumpkin_box.jpg" alt="Orange cat sitting in a Shutterfly box." width="200">
-            <img src="images/pumpkin_couch.jpg" alt="Cat laying on his back on a couch." width="200">
-            <img src="images/pumpkin_sleep.jpg" alt="Cat sleeping on couch." width="200">
-            <img src="images/pumpkin_bag.jpg" alt="Cat sitting on duffel bag." width="200">
+            <img src="Images/pumpkin_box.jpg" alt="Orange cat sitting in a Shutterfly box." width="200">
+            <img src="Images/pumpkin_couch.jpg" alt="Cat laying on his back on a couch." width="200">
+            <img src="Images/pumpkin_sleep.jpg" alt="Cat sleeping on couch." width="200">
+            <img src="Images/pumpkin_bag.jpg" alt="Cat sitting on duffel bag." width="200">
             <h3>Likes</h3>
             <ul>
                 <li>Treats</li>
@@ -63,7 +63,7 @@
      </div>
 
      <div><h2>Oliver</h2>
-        <img src="images/oliver.jpg" alt="Dog laying on floor." width="400">
+        <img src="Images/oliver.jpg" alt="Dog laying on floor." width="400">
         <p1>Oliver is very focused on two things: eating and getting attention. He is devestated
             when his owner leaves him. Whether she leaves for the day to go to work or for two minutes
             to brush her teeth, it all feels like an eternity to him.</p1>
@@ -71,10 +71,10 @@
                 very brave but he is able to muster up a lot of courage when a treat is involved. He cowered away
                 from a kitten until he noticed she had a full bowl of food.</p2>
             <h3>Photo Gallery</h3>
-            <img src="images/oliver_outside.jpg" alt="Dog with leash in the grass." width="200">
-            <img src="images/baby_oliver.jpg" alt="Puppy being held up to the camera" width="200">
-            <img src="images/oliver_couch.jpg" alt="Dog sitting up on a couch" width="200">
-            <img src="images/oliver_snow.jpg" alt="Dog in the snow" width="200">
+            <img src="Images/oliver_outside.jpg" alt="Dog with leash in the grass." width="200">
+            <img src="Images/baby_oliver.jpg" alt="Puppy being held up to the camera" width="200">
+            <img src="Images/oliver_couch.jpg" alt="Dog sitting up on a couch" width="200">
+            <img src="Images/oliver_snow.jpg" alt="Dog in the snow" width="200">
             <h3>Likes</h3>
             <ul>
                 <li>Irritating cats (or people)</li>
@@ -84,7 +84,7 @@
               <!-- Lauren Pesce -->
      </div>
 <div><h2>Happy</h2>
-    <img src="images/happy_sleep.jpg" alt="Black and grey cat laying on bed, near asleep" width="400">
+    <img src="Images/happy_sleep.jpg" alt="Black and grey cat laying on bed, near asleep" width="400">
     <p1> Happy is an old cat. He spends a lot of his day lounging around, in whatever spot he feels is most comfortable at the time. 
         He is an indoor cat, but whenever we open the door to let the dogs out, he always comes running out so he can eat grass.
     </p1>
@@ -94,10 +94,10 @@
 
         </p2>
         <h3>Photo Gallery</h3>
-        <img src="images/happy_izzy_water.jpg" alt="Happy and black dog at their water bowl" width="200">
-        <img src="images/happy_walk.jpg" alt="Happy walking towards the camera" width="200">
-        <img src="images/happy_bed.jpg" alt="Happy laying in his cat bed" width="200">
-        <img src="images/happy_closeup.jpg" alt="A close-up photo of Happy" width="200">
+        <img src="Images/happy_izzy_water.jpg" alt="Happy and black dog at their water bowl" width="200">
+        <img src="Images/happy_walk.jpg" alt="Happy walking towards the camera" width="200">
+        <img src="Images/happy_bed.jpg" alt="Happy laying in his cat bed" width="200">
+        <img src="Images/happy_closeup.jpg" alt="A close-up photo of Happy" width="200">
         <h3>Likes</h3>
         <ul>
             <li>Catnip</li>
@@ -106,17 +106,17 @@
           </ul>
           <!-- Lucas England --></div>
 <div><h2>Luke</h2>
-    <img src="images/Luke.jpg" alt="Luke is a white cat with long hair and brown spots." width="400">
+    <img src="Images/Luke.jpg" alt="Luke is a white cat with long hair and brown spots." width="400">
     <p1> Luke is a six-year-old white cat; he is very energetic and likes to play fetch. Luke has one brother named Jesse. 
         Luke loves chicken cat treats, they are his favorite.</p1>
         <p2>Luke is very badly behaved. He often jumps up on furniture and drinks out of our water glasses. 
             He also steals jewelry and hides it in his bed. 
             Luke knows several commands; he can sit, jump, follow, play fetch, and give people his paw. </p2>
         <h3>Photo Gallery</h3>
-        <img src="images/Luke.JPG" alt="Luke looks into the camera, only head and front paws are in frame." width="200">
-        <img src="images/luke_reads.JPG" alt="Luke sits on a chemistry textbook." width="200">
-        <img src="images/luke_in_sunn.JPG" alt="Luke sits on a white bench in front of a window, grass is seen behind him." width="200">
-        <img src="images/luke_yawns.jpg" alt="Luke lays on his back on a gray blanket and yawns." width="200">
+        <img src="Images/Luke.JPG" alt="Luke looks into the camera, only head and front paws are in frame." width="200">
+        <img src="Images/luke_reads.JPG" alt="Luke sits on a chemistry textbook." width="200">
+        <img src="Images/luke_in_sunn.JPG" alt="Luke sits on a white bench in front of a window, grass is seen behind him." width="200">
+        <img src="Images/luke_yawns.jpg" alt="Luke lays on his back on a gray blanket and yawns." width="200">
         <h3>Likes</h3>
         <ul>
             <li>Salmon</li>
@@ -126,16 +126,16 @@
           <!-- Katherine Isseks al-Abadi Hattersley -->
         </div>
 <div><h2>Molly</h2>
-    <img src="images/molly_on_cabinet.jpg" alt="Calico cat with orange, white, and black coloring sitting on cabinet" width="400">
+    <img src="Images/molly_on_cabinet.jpg" alt="Calico cat with orange, white, and black coloring sitting on cabinet" width="400">
     <p1> Molly is an 18 year old calico cat. She prefers spending her days lounging on the couch or curled up sleeping over a vent (or anything warm).
          Occasionally, she will go outside and attempt to hunt birds or rats (sometimes successful which is terrifying).</p1>
         <p2>Her favorite habit is to brush against our legs, especially during dinner when everyone is seated around a table. 
             She is an attention seeker, always meowing to get as many pets and head rubs as she possibly can.</p2>
         <h3>Photo Gallery</h3>
-        <img src="images/molly_on_pc.jpg" alt="Molly sleeping on a warm PC" width="200">
-        <img src="images/molly_scratching_paper.MOV" alt="Molly trying to tear up a sheet of paper" width="200">
-        <img src="images/molly_climb_chair.jpg" alt="Molly trying to climb a chair to receive pets and head rubs" width="200">
-        <img src="images/molly_sunbathing.jpg" alt="Molly enjoying warm rays of sunshine" width="200">
+        <img src="Images/molly_on_pc.jpg" alt="Molly sleeping on a warm PC" width="200">
+        <img src="Images/molly_scratching_paper.MOV" alt="Molly trying to tear up a sheet of paper" width="200">
+        <img src="Images/molly_climb_chair.jpg" alt="Molly trying to climb a chair to receive pets and head rubs" width="200">
+        <img src="Images/molly_sunbathing.jpg" alt="Molly enjoying warm rays of sunshine" width="200">
         <h3>Likes</h3>
         <ul>
             <li>Scratching couches</li>
@@ -145,16 +145,16 @@
           <!-- Jonathan Chen -->
         </div>
 <div><h2>Lucy</h2>
-    <img src="images/Lucy.jpg" alt="Calico with white, orange, and black coloring" width="400">
+    <img src="Images/Lucy.jpg" alt="Calico with white, orange, and black coloring" width="400">
     <p1>Lucy is a 17-year-old calico that I have had since I was 5, she has pretty much grown up with me my whole life. 
         Even though she is old she is still kicking it and enjoys running around the house at 4am.</p1>
         <p2>Her favorite foods include anything but her kibble. She enjoys sunbathing and long naps, along with lots of petting. 
             However, she hates getting her stomach rubbed.</p2>
         <h3>Photo Gallery</h3>
-        <img src="images/lucy_upsidedown.jpg" alt="Lucy laying on her back" width="200">
-        <img src="images/lucy_sleeping.jpg" alt="Lucy curled up in her bed sleeping" width="200">
-        <img src="images/Lucy_sleepingpt2.jpg" alt="Lucy curled up sleeping" width="200">
-        <img src="images/Lucy_laying.jpg" alt="Lucy laying staring at the camera" width="200">
+        <img src="Images/lucy_upsidedown.jpg" alt="Lucy laying on her back" width="200">
+        <img src="Images/lucy_sleeping.jpg" alt="Lucy curled up in her bed sleeping" width="200">
+        <img src="Images/Lucy_sleepingpt2.jpg" alt="Lucy curled up sleeping" width="200">
+        <img src="Images/Lucy_laying.jpg" alt="Lucy laying staring at the camera" width="200">
         <h3>Likes</h3>
         <ul>
             <li>Food</li>
