--- a/recipes.html
+++ b/recipes.html
@@ -25,7 +25,7 @@
         <span>Source: Taco Bell Website</span>
         <span>Category: Comfort Dish</span>
 
-        <img src="images/Crunchwrap_Supreme.png" width = "400" alt="Crunchwrap Supreme">
+        <img src="Images/Crunchwrap_Supreme.png" width = "400" alt="Crunchwrap Supreme">
         <p>There's an undeniable satisfaction in indulging in a Crunchwrap Supreme whenever hunger strikes. 
             Fusing a traditional Mexican taco with a generously sized flattened burrito creates a symphony 
             of flavors that resonates perfectly with my taste buds.</p>
@@ -55,9 +55,9 @@
         </ol>
 
         <h3>Additional Food images</h3>
-        <img src="images/Crunchwrap.png" width = "200" alt="Taco with cheese sauce and beef">
-        <img src="images/Taco_Bell_Beef_Cheese.png" width = "200" alt="Assembled Crunchwrap supreme with toppings">
-        <img src="images/Crunchwrap_Supreme.png" width = "200" alt="Finished product of a Crunchwrap">
+        <img src="Images/Crunchwrap.png" width = "200" alt="Taco with cheese sauce and beef">
+        <img src="Images/Taco_Bell_Beef_Cheese.png" width = "200" alt="Assembled Crunchwrap supreme with toppings">
+        <img src="Images/Crunchwrap_Supreme.png" width = "200" alt="Finished product of a Crunchwrap">
 
         <!-- Audrey Eng -->
 
@@ -68,7 +68,7 @@
         <span>Source: Family Recipe</span>
         <span>Category: Dessert</span>
 
-        <img src="images/double_chocolate_cookies.png" width = "400" alt="Chocolate chips">
+        <img src="Images/double_chocolate_cookies.png" width = "400" alt="Chocolate chips">
         <p>My daughter learned to make these cookies at a baking camp at Zingermanns and has tweaked the recipe to fit the taste buds of her siblings.  They are extremely sugary so the salt helps to balance it.  Note, these cookies are best eaten very quickly.</p>
         <h3>Recipe Ingredients</h3>
         <ul>
@@ -98,7 +98,7 @@
         </ol>
 
         <h3>Additional Food images</h3>
-        <img src="images/double_chocolate_chips.png" width = "200" alt="A small pile of chocolate chips">
+        <img src="Images/double_chocolate_chips.png" width = "200" alt="A small pile of chocolate chips">
         <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/chocolate-d9ba778.jpg?quality=90&webp=true&resize=600,545" width = "200" alt="Chocolate melting in a boiler">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Brown_sugar_examples.JPG" width = "200" alt="Brown sugar in three different shades of darkness">
 
@@ -110,7 +110,7 @@
         <span>Source: Alex Likens </span>
         <span>Category: Main Dish</span>
 
-        <img src="images/peanut-butter-and-jelly-sandwich.jpg" width = "400" alt="Two slices of peanut butter and jelly stacked on top of each other">
+        <img src="Images/peanut-butter-and-jelly-sandwich.jpg" width = "400" alt="Two slices of peanut butter and jelly stacked on top of each other">
         <p>This is a dish that is great at all times of year. It is a classic dish and is often considered a comfort dish. 
            It is great for any situation whether you are on the go, in a rush, or just looking for a tasty meal in your home.</p>
         <h3>Recipe Ingredients</h3>
@@ -129,9 +129,9 @@
         </ol>
 
         <h3>Additional Food images</h3>
-        <img src="images/pbj2.jpg" width = "200" alt="Peanut Butter and Jelly in the process of being made">
-        <img src="images/pbj3.jpg" width = "200" alt="PBJ finished product 1">
-        <img src="images/pbj4.jpg" width = "200" alt="PBJ finished product 2 ">
+        <img src="Images/pbj2.jpg" width = "200" alt="Peanut Butter and Jelly in the process of being made">
+        <img src="Images/pbj3.jpg" width = "200" alt="PBJ finished product 1">
+        <img src="Images/pbj4.jpg" width = "200" alt="PBJ finished product 2 ">
 
         <!-- Alexander Likens  -->
     </div>
