--- a/travel.html
+++ b/travel.html
@@ -15,7 +15,7 @@
   </nav>
 
 <body>
-    <a id="skip" href="#main">Skip to Main Content</a>
+    <a>href="#main">Skip to Main Content</a>
 
   <header> <h1>Travel</h1> </header>
 
