--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </ul>
           <!-- Lucas England --></div>
 <div><h2>Luke</h2>
-    <img src="Images/Luke.jpg" alt="Luke is a white cat with long hair and brown spots." width="400">
+    <img src="Images/luke_og.jpg" alt="Luke is a white cat with long hair and brown spots." width="400">
     <p1> Luke is a six-year-old white cat; he is very energetic and likes to play fetch. Luke has one brother named Jesse. 
         Luke loves chicken cat treats, they are his favorite.</p1>
         <p2>Luke is very badly behaved. He often jumps up on furniture and drinks out of our water glasses. 
