--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <!-- Katherine Isseks al-Abadi Hattersley -->
         </div>
 <div><h2>Molly</h2>
-    <img src="Images/molly_on_cabinet.jpg" alt="Calico cat with orange, white, and black coloring sitting on cabinet" width="400">
+    <img src="Images/molly_on_cabinet.JPG" alt="Calico cat with orange, white, and black coloring sitting on cabinet" width="400">
     <p1> Molly is an 18 year old calico cat. She prefers spending her days lounging on the couch or curled up sleeping over a vent (or anything warm).
          Occasionally, she will go outside and attempt to hunt birds or rats (sometimes successful which is terrifying).</p1>
         <p2>Her favorite habit is to brush against our legs, especially during dinner when everyone is seated around a table. 
@@ -134,8 +134,8 @@
         <h3>Photo Gallery</h3>
         <img src="Images/molly_on_pc.jpg" alt="Molly sleeping on a warm PC" width="200">
         <img src="Images/molly_scratching_paper.MOV" alt="Molly trying to tear up a sheet of paper" width="200">
-        <img src="Images/molly_climb_chair.jpg" alt="Molly trying to climb a chair to receive pets and head rubs" width="200">
-        <img src="Images/molly_sunbathing.jpg" alt="Molly enjoying warm rays of sunshine" width="200">
+        <img src="Images/molly_climb_chair.JPG" alt="Molly trying to climb a chair to receive pets and head rubs" width="200">
+        <img src="Images/molly_sunbathing.JPG" alt="Molly enjoying warm rays of sunshine" width="200">
         <h3>Likes</h3>
         <ul>
             <li>Scratching couches</li>
@@ -151,10 +151,10 @@
         <p2>Her favorite foods include anything but her kibble. She enjoys sunbathing and long naps, along with lots of petting. 
             However, she hates getting her stomach rubbed.</p2>
         <h3>Photo Gallery</h3>
-        <img src="Images/lucy_upsidedown.jpg" alt="Lucy laying on her back" width="200">
-        <img src="Images/lucy_sleeping.jpg" alt="Lucy curled up in her bed sleeping" width="200">
-        <img src="Images/Lucy_sleepingpt2.jpg" alt="Lucy curled up sleeping" width="200">
-        <img src="Images/Lucy_laying.jpg" alt="Lucy laying staring at the camera" width="200">
+        <img src="Images/lucy_upsidedown.JPG" alt="Lucy laying on her back" width="200">
+        <img src="Images/lucy_sleeping.JPG" alt="Lucy curled up in her bed sleeping" width="200">
+        <img src="Images/Lucy_sleepingpt2.JPG" alt="Lucy curled up sleeping" width="200">
+        <img src="Images/Lucy_laying.JPG" alt="Lucy laying staring at the camera" width="200">
         <h3>Likes</h3>
         <ul>
             <li>Food</li>
