--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
           <!-- Jonathan Chen -->
         </div>
 <div><h2>Lucy</h2>
-    <img src="Images/Lucy.jpg" alt="Calico with white, orange, and black coloring" width="400">
+    <img src="Images/Lucy.JPG" alt="Calico with white, orange, and black coloring" width="400">
     <p1>Lucy is a 17-year-old calico that I have had since I was 5, she has pretty much grown up with me my whole life. 
         Even though she is old she is still kicking it and enjoys running around the house at 4am.</p1>
         <p2>Her favorite foods include anything but her kibble. She enjoys sunbathing and long naps, along with lots of petting. 
             However, she hates getting her stomach rubbed.</p2>
         <h3>Photo Gallery</h3>
-        <img src="Images/lucy_upsidedown.JPG" alt="Lucy laying on her back" width="200">
-        <img src="Images/lucy_sleeping.JPG" alt="Lucy curled up in her bed sleeping" width="200">
+        <img src="Images/Lucy_upsidedown.JPG" alt="Lucy laying on her back" width="200">
+        <img src="Images/Lucy_sleeping.JPG" alt="Lucy curled up in her bed sleeping" width="200">
         <img src="Images/Lucy_sleepingpt2.JPG" alt="Lucy curled up sleeping" width="200">
         <img src="Images/Lucy_laying.JPG" alt="Lucy laying staring at the camera" width="200">
         <h3>Likes</h3>
