--- a/recipes.html
+++ b/recipes.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
 </head>
@@ -15,10 +16,9 @@
   </nav>
   
 <body>
-     <a href = "#main"> Skip to Main Content</a>
-
   <header> <h1>Recipes</h1> </header>
     <main>
+        <a href = "#main"> Skip to Main Content</a>
     <div>
         <h2>Crunchwrap Supreme</h2>
         <span>Origin: Taco Bell</span>
