--- a/travel.html
+++ b/travel.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
 </head>
@@ -13,13 +14,11 @@
       <li><a href="recipes.html">Recipes</a></li>
     </ul>
   </nav>
-
+  
 <body>
-     <a href = "#main"> Skip to Main Content</a>
-
   <header> <h1>Travel</h1> </header>
-
     <main>
+        <a href = "#main"> Skip to Main Content</a>
         <div>
             <h2>Yellowstone</h2>
     
