--- a/travel.html
+++ b/travel.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
 </head>
+    <a href = "#main"> Skip to Main Content</a>
 <!-- Navigation -->
 <nav>
     <ul>
