--- a/recipes.html
+++ b/recipes.html
@@ -19,6 +19,7 @@
 <body>
   <header> <h1>Recipes</h1> </header>
     <main>
+        <a href = "#main"> Skip to Main Content</a>
     <div>
         <h2>Crunchwrap Supreme</h2>
         <span>Origin: Taco Bell</span>
