--- a/recipes.html
+++ b/recipes.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Pets</title>
 </head>
-    <a href = "#main"> Skip to Main Content</a>
+<body>
+    <a href = "#main" id="skip">Skip to Main content</a>
+    
 <!-- Navigation -->
 <nav>
     <ul>
@@ -14,11 +17,7 @@
       <li><a href="recipes.html">Recipes</a></li>
     </ul>
   </nav>
-  
-<body>
-  <header> <h1>Recipes</h1> </header>
-    <main>
-        <a href = "#main"> Skip to Main Content</a>
+    <main id="main">
     <div>
         <h2>Crunchwrap Supreme</h2>
         <span>Origin: Taco Bell</span>
