--- a/travel.html
+++ b/travel.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
 </head>
 <body>
-    <a href = "#main"> Skip to Main Content</a>
+    <a href = "#main" id="skip">Skip to Main content</a>
+    
 <!-- Navigation -->
 <nav>
     <ul>
@@ -15,8 +17,7 @@
       <li><a href="recipes.html">Recipes</a></li>
     </ul>
   </nav>
-  <header> <h1>Travel</h1> </header>
-    <main>
+    <main id="main">
         <div>
             <h2>Yellowstone</h2>
     
